# spark-examples

./: .gitignore  README.md  main.py  pyproject.toml
library-for-spark/: pyproject.toml
library_for_spark/: pyproject.toml
library_for_spark/src/library_for_spark/: __init__.py  user_defined_function.py
spark/: Dockerfile  deploy_library_to_aws.ps1  deploy_library_to_aws.sh  serverless_demo.ipynb  serverless_demo_job.py  start_serverless_demo_job.ps1  start_serverless_demo_job.sh
