[project]
name = "library-for-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Kittredge", email = "andrewlkittredge@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
